feat: update to spring boot 4.0.3